<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2021 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  

  <!--
    The "fullscreen" and "fullscreen-sticky" TWA manifest values correspond to "immersive" and "sticky-immersive"
    AndroidManifest values.
  -->
  

  <!--
    This variable below expresses the relationship between the app and the site,
    as documented in the TWA documentation at
    https://developers.google.com/web/updates/2017/10/using-twa#set_up_digital_asset_links_in_an_android_app
    and is injected into the AndroidManifest.xml
  -->
  <string name="assetStatements">
    [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
            \"namespace\": \"web\",
            \"site\": \"https://polycal-ebon.vercel.app\"
        }
    }]
    
  </string>  

  <string name="widget_new_event_label">PolyCal: New Event</string>
  <string name="widget_nlp_label">PolyCal: Natural language</string>
  <string name="widget_new_event_description">Type a title, then open the New Event card in PolyCal.</string>
  <string name="widget_nlp_description">Type a description, then open the natural-language New Event card in PolyCal.</string>
  <string name="widget_new_event_hint">Title</string>
  <string name="widget_nlp_hint">Description</string>
  <string name="widget_send">Send</string>
</resources>
